hotfix: changed get user profile route
